Soap requests are now getting passed through the proxy, in addition to wsdl reqeuests (which we already had working). Note: soap requests had to over-write one part of the wsdl document in order to use the proxy instead of trying to connect to paysafecard directly.

--- a/paysafe-card/test/src/README
+++ b/paysafe-card/test/src/README
@@ -1,3 +1,7 @@
 To run the test, try the following command (directory path may be different depending on where you are currently):
 
 python -m unittest discover paysafe-card/test/src
+
+Or, if running from PyCharm:
+
+Create a new configuration for Unitest, and run SOPGClassicMerchantClientTest.py as a script.
