--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-12 22:28-0500\n"
+"POT-Creation-Date: 2015-02-13 03:26-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -45,15 +45,15 @@ msgstr ""
 msgid "Terms and conditions"
 msgstr ""
 
-#: client/app/html/common_helpers/logo_banner.html:36
+#: client/app/html/common_helpers/logo_banner.html:27
 msgid "Translate"
 msgstr ""
 
-#: client/app/html/common_helpers/logo_banner.html:42
+#: client/app/html/common_helpers/logo_banner.html:46
 msgid "About"
 msgstr ""
 
-#: client/app/html/common_helpers/logo_banner.html:46
+#: client/app/html/common_helpers/logo_banner.html:50
 msgid "Press"
 msgstr ""
 
@@ -410,6 +410,59 @@ msgid ""
 msgstr ""
 
 #: client/app/html/user_main_helpers/photo_rules.html:9
+msgid ""
+"Photos in your profile must be your own photos. Photos that you do not own "
+"or that you have copied may be deleted"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:10
+msgid "All photos in your profile must be of yourself"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:11
+msgid ""
+"While it is acceptable to hide your face or show only a part of yourself,\n"
+"                             photos must show enough of yourself to help our "
+"members to evaluate your\n"
+"                             profile"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:14
+msgid ""
+"For example, a photo focused on a toe, a hand, or an eyeball is not helpful "
+"and may be deleted"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:15
+msgid "Photos must not be focused on the crotch, breasts, or butt"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:17
+msgid ""
+"Photos that contain nudity or that are sexually provocative will not be "
+"approved as publicly visible"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:18
+msgid "Private photos may be sensual but must not be pornographic"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:20
+msgid "No pornographic or nude photos allowed"
+msgstr ""
+"Your profile may not contain pornographic or nude photos under any "
+"circumstances (neither public or private photos)"
+
+#: client/app/html/user_main_helpers/photo_rules.html:22
+msgid ""
+"If we delete your principal profile photo and you have other publicly "
+"visible\n"
+"                             photos, then we may make any of these other "
+"publicly visible photos become your principal\n"
+"                             profile photo"
+msgstr ""
+
+#: client/app/html/user_main_helpers/photo_rules.html:25
 #, python-format
 msgid ""
 "Public photos (all photos not marked private) may show up\n"
@@ -417,34 +470,12 @@ msgid ""
 "guests viewing %(app)s"
 msgstr ""
 
-#: client/app/html/user_main_helpers/photo_rules.html:12
-msgid ""
-"Photos that contain nudity or that are sexually provocative will not be "
-"approved as publicly visible"
-msgstr ""
-
-#: client/app/html/user_main_helpers/photo_rules.html:13
-msgid ""
-"Private photos may be sensual but must not be pornographic and must not "
-"focus on intimate parts of the body"
-msgstr ""
-
-#: client/app/html/user_main_helpers/photo_rules.html:15
-msgid "No pornographic or nude photos allowed"
-msgstr ""
-"Your profile may not contain pornographic or nude photos under any "
-"circumstances (neither public or private photos)"
-
-#: client/app/html/user_main_helpers/photo_rules.html:17
-msgid "Public photos must not be focused on the crotch, breasts, or butt"
-msgstr ""
-
-#: client/app/html/user_main_helpers/photo_rules.html:18
+#: client/app/html/user_main_helpers/photo_rules.html:27
 #, python-format
 msgid "All people shown in an image must be at least %(age)s years old"
 msgstr ""
 
-#: client/app/html/user_main_helpers/photo_rules.html:19
+#: client/app/html/user_main_helpers/photo_rules.html:28
 msgid "Photos that do not follow the rules will be erased without notification"
 msgstr ""
 
@@ -1163,7 +1194,7 @@ msgid ""
 msgstr ""
 
 #: rs/ajax.py:714 rs/forms.py:1084 rs/login.py:759 rs/messages.py:519
-#: rs/rendering.py:413 rs/utils.py:1426
+#: rs/rendering.py:414 rs/utils.py:1426
 msgid ""
 "Internal error - this error has been logged, and will be investigated "
 "immediately"
