Updated formatting of photo rules text

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -597,8 +597,8 @@ msgid ""
 "help our members to evaluate your\n"
 "                             profile"
 msgstr ""
-"Aunque es aceptable ocultar tu cara o mostrar sólo una parte de ti mismo, "
-"las fotos deben mostrar lo suficiente de ti mismo para ayudar a nuestros "
+"Aunque es aceptable ocultar tu cara o mostrar sólo una parte de tu mismo, "
+"las fotos deben mostrar lo suficiente de tu mismo para ayudar a nuestros "
 "miembros evaluar tu perfil"
 
 #: client/app/html/user_main_helpers/photos_public.html:10
@@ -2258,7 +2258,7 @@ msgstr ""
 "Tu perfil no es completo. <strong>Debes escribir una descripción de más de "
 "%(num_chars)s carácteres (aproximadamente %(num_lines)s líneas) antes de que "
 "puedes enviar mensajes a los otros miembros.</strong>Tu descripción debe ser "
-"original, y debe describirte a ti mismo y lo que estás buscando. "
+"original, y debe describirte y lo que estás buscando. "
 "Descripciones que no sigan estas directrices pueden resultar en la "
 "eliminación de tu perfil sin aviso previo."
 
